# screeps-template

./: .gitignore  Gruntfile.js  LICENSE  README.md  package-lock.json  package.json  tpl.screeps.json
.github/workflows/: deploy.yml
js/src/: main.js
screeps/: Cargo.toml
screeps/src/: lib.rs
